--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0036.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0036.html
@@ -251,18 +251,7 @@
         </span>
         <span title="bbox 924 483 950 522" class="ocr_word" id="w_42">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span title="bbox 984 482 1050 521" class="ocr_word" id="w_43">
-          <span class="alternatives">
-            <ins title="nlp 2.00">36v—</ins>
-          </span>
-        </span>
-        <span title="bbox 1127 480 1198 522" class="ocr_word" id="w_45">
-          <span class="alternatives">
-            <ins title="nlp 2.00">68v</ins>
+            <ins title="nlp 2.00">f. 36v—68v</ins>
           </span>
         </span>
         <span title="bbox 1233 479 1311 520" class="ocr_word" id="w_46">
@@ -393,13 +382,7 @@
         </span>
         <span title="bbox 1838 615 1866 656" class="ocr_word" id="w_68">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1904 616 1999 657" class="ocr_word" id="w_69">
-          <span class="alternatives">
-            <ins title="nlp 2.00">129r—237v</ins>
+            <ins title="nlp 2.00">f. 129r—237v</ins>
           </span>
         </span>
       </span>
@@ -456,16 +439,11 @@
         </span>
         <span lang="grc" title="bbox 2081 686 2162 740" class="ocr_word" id="w_79">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἐξη-</ins>
+            <ins title="nlp 2.00">εξηγήσεως</ins>
           </span>
         </span>
       </span>
       <span title="bbox 348 761 887 814" class="ocr_line">
-        <span lang="grc" title="bbox 348 761 498 814" class="ocr_word" id="w_80">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">γήσεως</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 529 764 604 799" class="ocr_word" id="w_81">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">τῶν</ins>
@@ -925,7 +903,7 @@
         </span>
         <span lang="grc" title="bbox 2027 1244 2041 1280" class="ocr_word" id="w_162">
           <span class="alternatives">
-            <ins title="nlp 2.00">1–48</ins>
+            <ins title="nlp 2.00">–48</ins>
           </span>
         </span>
       </span>
@@ -988,19 +966,7 @@
         </span>
         <span title="bbox 700 1378 884 1427" class="ocr_word" id="w_172">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">exhibet,</ins>
-            <del title="nlp 0.90">exhibet,</del>
-          </span>
-        </span>
-        <span title="bbox 921 1378 948 1419" class="ocr_word" id="w_173">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">f.</ins>
-            <del title="nlp 0.90">f.</del>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 980 1379 1036 1420" class="ocr_word" id="w_174">
-          <span class="alternatives">
-            <ins title="nlp 2.00">49–163</ins>
+            <ins title="nlp 2.00">exhibet, f. 49—163</ins>
           </span>
         </span>
         <span title="bbox 1210 1378 1332 1420" class="ocr_word" id="w_175">
@@ -1029,17 +995,11 @@
         </span>
         <span title="bbox 2103 1380 2162 1420" class="ocr_word" id="w_179">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">iu-</ins>
+            <ins title="nlp 2.00">inscripsimus</ins>
           </span>
         </span>
       </span>
       <span title="bbox 347 1447 2161 1501" class="ocr_line">
-        <span title="bbox 347 1447 592 1501" class="ocr_word" id="w_180">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">scripsimus</ins>
-            <del title="nlp 0.90">iuscripsimus</del>
-          </span>
-        </span>
         <span title="bbox 624 1447 744 1488" class="ocr_word" id="w_181">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">titulo</ins>
@@ -1271,17 +1231,11 @@
         </span>
         <span title="bbox 2102 1669 2163 1698" class="ocr_word" id="w_223">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">re-</ins>
+            <ins title="nlp 2.00">recensus</ins>
           </span>
         </span>
       </span>
       <span title="bbox 347 1722 961 1764" class="ocr_line">
-        <span title="bbox 347 1734 496 1763" class="ocr_word" id="w_224">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">census</ins>
-            <del title="nlp 0.90">recensus</del>
-          </span>
-        </span>
         <span title="bbox 527 1727 569 1763" class="ocr_word" id="w_225">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">et</ins>
@@ -1364,17 +1318,11 @@
         </span>
         <span title="bbox 2089 1793 2164 1835" class="ocr_word" id="w_238">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">ali-</ins>
+            <ins title="nlp 2.00">aliquantum</ins>
           </span>
         </span>
       </span>
       <span title="bbox 347 1858 2164 1914" class="ocr_line">
-        <span title="bbox 347 1866 548 1912" class="ocr_word" id="w_239">
-          <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">quantum</ins>
-            <del title="nlp 0.90">aliquantum</del>
-          </span>
-        </span>
         <span title="bbox 582 1858 663 1900" class="ocr_word" id="w_240">
           <span class="alternatives">
             <ins title="nlp 0.10" class="alt">fide</ins>
@@ -1648,14 +1596,12 @@
         </span>
         <span title="bbox 728 2124 772 2156" class="ocr_word" id="w_287">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">V1</ins>
           </span>
         </span>
         <span title="bbox 803 2123 818 2167" class="ocr_word" id="w_288">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 845 2123 894 2168" class="ocr_word" id="w_289">
@@ -1676,8 +1622,7 @@
         </span>
         <span title="bbox 1043 2123 1059 2169" class="ocr_word" id="w_292">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 1092 2125 1133 2157" class="ocr_word" id="w_293">
@@ -1764,8 +1709,7 @@
         </span>
         <span title="bbox 564 2179 580 2226" class="ocr_word" id="w_308">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 604 2180 645 2214" class="ocr_word" id="w_309">
@@ -1801,8 +1745,7 @@
         </span>
         <span title="bbox 1176 2183 1211 2216" class="ocr_word" id="w_315">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">S1</ins>
           </span>
         </span>
         <span title="bbox 1234 2182 1250 2229" class="ocr_word" id="w_316">
@@ -1873,8 +1816,7 @@
         </span>
         <span title="bbox 575 2239 590 2285" class="ocr_word" id="w_328">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 617 2251 651 2273" class="ocr_word" id="w_329">
@@ -2214,8 +2156,7 @@
         </span>
         <span title="bbox 654 2413 671 2458" class="ocr_word" id="w_389">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 700 2414 789 2451" class="ocr_word" id="w_390">
@@ -2319,8 +2260,7 @@
         </span>
         <span title="bbox 463 2470 478 2516" class="ocr_word" id="w_408">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 509 2471 553 2505" class="ocr_word" id="w_409">
@@ -2440,8 +2380,7 @@
         </span>
         <span title="bbox 600 2529 617 2574" class="ocr_word" id="w_430">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 645 2529 689 2563" class="ocr_word" id="w_431">
@@ -2537,8 +2476,7 @@
         </span>
         <span title="bbox 543 2586 557 2632" class="ocr_word" id="w_449">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 599 2588 642 2620" class="ocr_word" id="w_450">
@@ -2652,20 +2590,17 @@
         </span>
         <span title="bbox 473 2657 522 2678" class="ocr_word" id="w_470">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">tu)</ins>
-            <del title="nlp 0.90">tu</del>
+            <ins title="nlp 2.00">τῶ</ins>
           </span>
         </span>
         <span title="bbox 554 2646 594 2677" class="ocr_word" id="w_471">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">VI</ins>
-            <del title="nlp 0.90">VI</del>
+            <ins title="nlp 2.00">V1</ins>
           </span>
         </span>
         <span title="bbox 623 2644 640 2690" class="ocr_word" id="w_472">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 668 2646 687 2678" class="ocr_word" id="w_473">
@@ -2753,8 +2688,7 @@
         </span>
         <span title="bbox 2144 2656 2156 2701" class="ocr_word" id="w_489">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
       </span>
@@ -2884,8 +2818,7 @@
         </span>
         <span title="bbox 489 2760 503 2805" class="ocr_word" id="w_512">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 534 2761 576 2794" class="ocr_word" id="w_513">
@@ -2895,8 +2828,7 @@
         </span>
         <span title="bbox 604 2769 682 2805" class="ocr_word" id="w_514">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">jiost</ins>
-            <del title="nlp 0.90">jiost</del>
+            <ins title="nlp 2.00">post</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 707 2775 755 2795" class="ocr_word" id="w_515">
@@ -3075,9 +3007,14 @@
             <ins title="nlp 1.00" class="alt">5</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1921 2831 2059 2869" class="ocr_word" id="w_548">
+        <span id="w_548_0" class="ocr_word" title="bbox 1921 2831 2059 2869">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀσπίδαςR</ins>
+            <ins class="alt" title="nlp 2.00">ἀσπίδας</ins>
+          </span>
+        </span>
+        <span id="w_548_1" class="ocr_word" title="bbox 1921 2831 2059 2869">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">R</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 2143 2831 2158 2878" class="ocr_word" id="w_549">
@@ -3354,8 +3291,7 @@
         </span>
         <span title="bbox 1250 2998 1267 3043" class="ocr_word" id="w_599">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">jj</ins>
-            <del title="nlp 0.90">jj</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span lang="grc" title="bbox 1288 2983 1442 3046" class="ocr_word" id="w_600">
@@ -3451,8 +3387,7 @@
         </span>
         <span title="bbox 751 3050 768 3096" class="ocr_word" id="w_616">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">li</ins>
-            <del title="nlp 0.90">li</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 797 3056 876 3085" class="ocr_word" id="w_617">
@@ -3474,8 +3409,7 @@
         </span>
         <span title="bbox 1126 3068 1183 3089" class="ocr_word" id="w_620">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">xat</ins>
-            <del title="nlp 0.90">xat</del>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span title="bbox 1210 3057 1267 3090" class="ocr_word" id="w_621">
@@ -3546,8 +3480,7 @@
         </span>
         <span title="bbox 2097 3077 2159 3099" class="ocr_word" id="w_633">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">utio</ins>
-            <del title="nlp 0.90">utio</del>
+            <ins title="nlp 2.00">ὑπὸ</ins>
           </span>
         </span>
       </span>
@@ -3566,8 +3499,7 @@
         </span>
         <span title="bbox 489 3104 507 3151" class="ocr_word" id="w_636">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">II</ins>
-            <del title="nlp 0.90">II</del>
+            <ins title="nlp 2.00">||</ins>
           </span>
         </span>
         <span title="bbox 535 3108 556 3140" class="ocr_word" id="w_637">
