--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0238.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0238.html
@@ -789,7 +789,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 2064 894 2148 930">
           <span class="alternatives">
-            <ins title="nlp 2.00">262ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1330,9 +1330,14 @@
             <ins class="alt" title="nlp 1.00">ταῦτα·</ins>
           </span>
         </span>
-        <span id="w_255" class="ocr_word" title="bbox 958 1514 1037 1566">
+        <span id="w_255_0" class="ocr_word" title="bbox 958 1514 1037 1566">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;δεῖ</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#003C;δεῖ</ins>
+          </span>
+        </span>
+        <span id="w_255_1" class="ocr_word" title="bbox 958 1514 1037 1566">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_256" class="ocr_word" title="bbox 1064 1531 1136 1569" lang="grc">
@@ -1345,9 +1350,14 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 1248 1513 1417 1568" lang="grc">
+        <span id="w_258_0" class="ocr_word" title="bbox 1248 1513 1417 1568">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐναντία&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">ἐναντία&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_258_1" class="ocr_word" title="bbox 1248 1513 1417 1568">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_259" class="ocr_word" title="bbox 1453 1530 1477 1568" lang="grc">
@@ -1368,16 +1378,6 @@
         <span id="w_262" class="ocr_word" title="bbox 1802 1527 1913 1567" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φύσιν</ins>
-          </span>
-        </span>
-        <span id="w_263" class="ocr_word" title="bbox 1946 1528 2042 1552" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
-          </span>
-        </span>
-        <span id="w_264" class="ocr_word" title="bbox 2073 1529 2097 1566" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
       </span>
@@ -1558,9 +1558,14 @@
             <ins class="alt" title="nlp 1.00">διὰ</ins>
           </span>
         </span>
-        <span id="w_298" class="ocr_word" title="bbox 932 1791 1039 1847">
+        <span id="w_298_0" class="ocr_word" title="bbox 932 1791 1039 1847">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;γὰρ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;γἂρ&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_298_1" class="ocr_word" title="bbox 932 1791 1039 1847">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_299" class="ocr_word" title="bbox 1069 1807 1136 1832" lang="grc">
@@ -1596,11 +1601,6 @@
         <span id="w_305" class="ocr_word" title="bbox 1855 1790 2012 1844" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ᾐνίξατο</ins>
-          </span>
-        </span>
-        <span id="w_306" class="ocr_word" title="bbox 2045 1805 2102 1830" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
       </span>
