--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0188.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0188.html
@@ -1345,9 +1345,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 384 1845 2071 1905">
-        <span id="w_259" class="ocr_word" title="bbox 384 1845 460 1902" lang="grc">
+        <span id="w_259_0" class="ocr_word" title="bbox 384 1845 460 1902">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οὐ καθ᾿&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οὐκ</ins>
+          </span>
+        </span>
+        <span id="w_259_1" class="ocr_word" title="bbox 384 1845 460 1902">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καθ᾿&gt;</ins>
           </span>
         </span>
         <span id="w_261" class="ocr_word" title="bbox 652 1865 819 1889" lang="grc">
@@ -1651,9 +1656,14 @@
             <ins class="alt" title="nlp 1.00">οὐσῶν,</ins>
           </span>
         </span>
-        <span id="w_316" class="ocr_word" title="bbox 1428 2313 1529 2370">
+        <span id="w_316_0" class="ocr_word" title="bbox 1428 2313 1529 2370">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τοῦ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;τοῦ&gt;</ins>
+          </span>
+        </span>
+        <span id="w_316_1" class="ocr_word" title="bbox 1428 2313 1529 2370">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 1565 2331 1602 2355" lang="grc">
@@ -1669,11 +1679,6 @@
         <span id="w_319" class="ocr_word" title="bbox 1927 2331 1997 2356" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
-          </span>
-        </span>
-        <span id="w_320" class="ocr_word" title="bbox 2028 2331 2066 2355" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
       </span>
@@ -1814,7 +1819,7 @@
         </span>
         <span id="w_347" class="ocr_word" title="bbox 717 2519 1004 2574" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">ὑποκειμένου&amp;#x003E;,</ins>
+            <ins title="nlp 2.00">#x003E;,</ins>
           </span>
         </span>
         <span id="w_348" class="ocr_word" title="bbox 1022 2519 1118 2560" lang="grc">
