--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0262.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0262.html
@@ -787,14 +787,7 @@
         </span>
         <span id="w_148" class="ocr_word" title="bbox 513 1165 521 1180">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
-          </span>
-        </span>
-        <span id="w_149" class="ocr_word" title="bbox 535 1164 606 1220">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’-?’</ins>
-            <del title="nlp 0.90">’-?’</del>
+            <ins title="nlp 2.00">Ἐφ’</ins>
           </span>
         </span>
         <span id="w_150" class="ocr_word" title="bbox 639 1165 694 1209" lang="grc">
@@ -1684,7 +1677,7 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1272 2204 1367 2255" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῖς</ins>
+            <ins title="nlp 2.00">(τοῖς</ins>
           </span>
         </span>
         <span id="w_323" class="ocr_word" title="bbox 1400 2218 1468 2257" lang="grc">
