--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0263.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0263.html
@@ -619,9 +619,14 @@
             <ins title="nlp 1.00" class="alt">οὐσίαν</ins>
           </span>
         </span>
-        <span lang="grc" title="bbox 1096 824 1247 879" class="ocr_word" id="w_117">
+        <span id="w_117_0" class="ocr_word" title="bbox 1096 824 1247 879">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈λόγου〉</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;λόγου&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_117_1" class="ocr_word" title="bbox 1096 824 1247 879">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 1264 841 1329 865" class="ocr_word" id="w_118">
@@ -637,11 +642,6 @@
         <span lang="grc" title="bbox 1552 841 1676 869" class="ocr_word" id="w_120">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">εἴδους</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1693 830 1810 867" class="ocr_word" id="w_121">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">αὐτοῦ</ins>
           </span>
         </span>
       </span>
@@ -2022,16 +2022,11 @@
         </span>
         <span lang="grc" title="bbox 1718 2427 1807 2451" class="ocr_word" id="w_391">
           <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ὑπο-</ins>
+            <ins title="nlp 2.00">ὑποκείμενον,</ins>
           </span>
         </span>
       </span>
       <span title="bbox 137 2479 1806 2536" class="ocr_line">
-        <span lang="grc" title="bbox 137 2497 321 2532" class="ocr_word" id="w_392">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">κείμενον,</ins>
-          </span>
-        </span>
         <span lang="grc" title="bbox 344 2497 412 2534" class="ocr_word" id="w_393">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">τὴν</ins>
@@ -2047,9 +2042,14 @@
             <ins title="nlp 1.00" class="alt">λέγεται,</ins>
           </span>
         </span>
-        <span title="bbox 794 2480 853 2535" class="ocr_word" id="w_396">
+        <span id="w_396_0" class="ocr_word" title="bbox 794 2480 853 2535">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ῆ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἡ&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_396_1" class="ocr_word" title="bbox 794 2480 853 2535">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span lang="grc" title="bbox 876 2485 963 2532" class="ocr_word" id="w_397">
@@ -2095,11 +2095,6 @@
         <span lang="grc" title="bbox 1635 2496 1673 2520" class="ocr_word" id="w_405">
           <span class="alternatives">
             <ins title="nlp 1.00" class="alt">ἐν</ins>
-          </span>
-        </span>
-        <span lang="grc" title="bbox 1699 2479 1806 2520" class="ocr_word" id="w_406">
-          <span class="alternatives">
-            <ins title="nlp 1.00" class="alt">ἄλλῳ</ins>
           </span>
         </span>
       </span>
@@ -2666,8 +2661,7 @@
         </span>
         <span title="bbox 404 3118 579 3152" class="ocr_word" id="w_514">
           <span class="alternatives">
-            <ins title="nlp 0.10" class="alt">’xsiTat</ins>
-            <del title="nlp 0.90">’xsiTat</del>
+            <ins title="nlp 2.00">ὑπόκειται</ins>
           </span>
         </span>
         <span title="bbox 597 3118 676 3151" class="ocr_word" id="w_515">
