--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0234.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0234.html
@@ -512,7 +512,7 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 837 895 993 950" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀφεῖλε</ins>
+            <ins title="nlp 2.00">(ἀφεῖλε</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 1038 911 1111 950" lang="grc">
@@ -1053,16 +1053,11 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 1972 1464 2095 1504" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διωρι-</ins>
+            <ins title="nlp 2.00">διωρισμένου</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 407 1519 2095 1575">
-        <span id="w_198" class="ocr_word" title="bbox 407 1532 549 1569" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σμένου</ins>
-          </span>
-        </span>
         <span id="w_199" class="ocr_word" title="bbox 584 1519 603 1558" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
@@ -1110,7 +1105,7 @@
         </span>
         <span id="w_208" class="ocr_word" title="bbox 1688 1519 1815 1573" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πᾶσα</ins>
+            <ins title="nlp 2.00">(πᾶσα</ins>
           </span>
         </span>
         <span id="w_209" class="ocr_word" title="bbox 1846 1534 1917 1572" lang="grc">
@@ -1316,9 +1311,14 @@
             <ins class="alt" title="nlp 1.00">δείξωμεν</ins>
           </span>
         </span>
-        <span id="w_248" class="ocr_word" title="bbox 1069 1797 1170 1853">
+        <span id="w_248_0" class="ocr_word" title="bbox 1069 1797 1170 1853">
           <span class="alternatives">
-            <ins title="nlp 2.00">Ε;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὖν&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_248_1" class="ocr_word" title="bbox 1069 1797 1170 1853">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_249" class="ocr_word" title="bbox 1191 1815 1238 1839" lang="grc">
@@ -1349,11 +1349,6 @@
         <span id="w_254" class="ocr_word" title="bbox 1783 1801 1860 1838" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_255" class="ocr_word" title="bbox 1893 1812 2088 1852" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συνεχῶν·</ins>
           </span>
         </span>
       </span>
