--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0264.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0264.html
@@ -104,7 +104,7 @@
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1686 179 1787 235" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔστι</ins>
+            <ins title="nlp 2.00">(ἔστι</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 1818 180 1859 220" lang="grc">
@@ -464,14 +464,14 @@
             <ins class="alt" title="nlp 1.00">ἢ</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 1157 593 1268 649" lang="grc">
+        <span id="w_87_0" class="ocr_word" title="bbox 1157 593 1268 649">
           <span class="alternatives">
-            <ins title="nlp 2.00">〈πρὸς</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;πρὸς</ins>
           </span>
         </span>
-        <span id="w_88" class="ocr_word" title="bbox 1299 593 1360 648" lang="grc">
+        <span id="w_87_1" class="ocr_word" title="bbox 1157 593 1268 649">
           <span class="alternatives">
-            <ins title="nlp 2.00">τὸ〉</ins>
+            <ins class="alt" title="nlp 2.00">τὸ&amp;#x003Ε;</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1406 595 1492 649" lang="grc">
