--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0190.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0190.html
@@ -835,9 +835,14 @@
             <ins class="alt" title="nlp 1.00">τίθησιν,</ins>
           </span>
         </span>
-        <span id="w_158" class="ocr_word" title="bbox 1344 1229 1459 1285">
+        <span id="w_158_0" class="ocr_word" title="bbox 1344 1229 1459 1285">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;οἷον&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;οἶον&gt;</ins>
+          </span>
+        </span>
+        <span id="w_158_1" class="ocr_word" title="bbox 1344 1229 1459 1285">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_159" class="ocr_word" title="bbox 1491 1233 1511 1271" lang="grc">
@@ -853,11 +858,6 @@
         <span id="w_161" class="ocr_word" title="bbox 1767 1247 1814 1272" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δὲ</ins>
-          </span>
-        </span>
-        <span id="w_162" class="ocr_word" title="bbox 1845 1233 2036 1285" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λέγεται</ins>
           </span>
         </span>
       </span>
@@ -1552,9 +1552,14 @@
             <ins title="nlp 2.00">διὰ δὲ τοῦ εἰπεὶν </ins>
           </span>
         </span>
-        <span id="w_297" class="ocr_word" title="bbox 1298 1992 1548 2046" lang="grc">
+        <span id="w_297_0" class="ocr_word" title="bbox 1298 1992 1548 2046">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;ἀδύνατον</ins>
+            <ins class="alt" title="nlp 2.00">&lt;ἀδύνατον</ins>
+          </span>
+        </span>
+        <span id="w_297_1" class="ocr_word" title="bbox 1298 1992 1548 2046">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_298" class="ocr_word" title="bbox 1581 1993 1726 2046" lang="grc">
@@ -1562,19 +1567,14 @@
             <ins class="alt" title="nlp 1.00">χωρὶς</ins>
           </span>
         </span>
-        <span id="w_299" class="ocr_word" title="bbox 1758 1991 1894 2047" lang="grc">
+        <span id="w_299_0" class="ocr_word" title="bbox 1758 1991 1894 2047">
           <span class="alternatives">
-            <ins title="nlp 2.00">εἶναι&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">εἶναι&gt;</ins>
           </span>
         </span>
-        <span id="w_300" class="ocr_word" title="bbox 1926 2008 1971 2032" lang="grc">
+        <span id="w_299_1" class="ocr_word" title="bbox 1758 1991 1894 2047">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
-          </span>
-        </span>
-        <span id="w_301" class="ocr_word" title="bbox 2004 2008 2037 2031" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ᾧ</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
