--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0132.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0132.html
@@ -1114,7 +1114,7 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 1663 1505 1796 1557" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 1838 1520 1908 1559" lang="grc">
@@ -1424,7 +1424,7 @@
         </span>
         <span id="w_277" class="ocr_word" title="bbox 2140 1846 2201 1883" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">92ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1595,7 +1595,7 @@
         </span>
         <span id="w_310" class="ocr_word" title="bbox 1178 2056 1310 2108" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐδὲν</ins>
+            <ins title="nlp 2.00">(οὐδὲν</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1341 2057 1412 2109" lang="grc">
@@ -2064,8 +2064,7 @@
         </span>
         <span id="w_404" class="ocr_word" title="bbox 2142 2631 2168 2663">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
       </span>
