--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0236.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0236.html
@@ -675,12 +675,12 @@
             <ins class="alt" title="nlp 1.00">ἐκεῖ</ins>
           </span>
         </span>
-        <span id="w_129_0" class="ocr_word" title="bbox 1560 839 1628 895">
+        <span id="w_129_0_0" class="ocr_word" title="bbox 1560 839 1628 895">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">&amp;#003C;εἰ&amp;#003E;</ins>
           </span>
         </span>
-        <span id="w_129_1" class="ocr_word" title="bbox 1560 839 1628 895">
+        <span id="w_129_0_1" class="ocr_word" title="bbox 1560 839 1628 895">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00"/>
           </span>
@@ -693,11 +693,6 @@
         <span id="w_131" class="ocr_word" title="bbox 1793 839 1875 880" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐστι</ins>
-          </span>
-        </span>
-        <span id="w_132" class="ocr_word" title="bbox 1905 856 1960 880" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῷ</ins>
           </span>
         </span>
       </span>
@@ -1114,7 +1109,7 @@
         </span>
         <span id="w_214_0" class="ocr_word" title="bbox 1989 1255 2110 1308">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(ἀντιδιῄρηται</ins>
+            <ins class="alt" title="nlp 2.00">ἀντιδιῄρηται</ins>
           </span>
         </span>
       </span>
